# RocketSolucoes

./: .gitignore  Cargo.toml  README.md  index.html  rocketmarketplace.html
css/: actionbar.css  checkyourorder.css  contactrocket.css  footer.css  header.css  headerwithname.css  impress.css  logo.css  main.css
docs/: index.html
docs/css/: impress.css
javascript/: darkmode.js  prices.js
js/: main.js
src/: main.rs
src/databases/postgres_connection/: mod.rs
static/: index.html  login.html  pageunderconstruction.html
static/css/: checkyourorder.css  contactrocket.css  footer.css  form.css  headerwithname.css  logo.css  rocketmarketplace.css
static/dashboard/: dados.json  dashboard.html  data.json  homedashcontent.html  orderdashcontent.html
static/js/: createinfos.js  cript.js  crud.js  main.js
styles/: checkyourorder.css  headertop.css  logo.css  main.css  presentation.css  sendmessage.css  servicesprovided.css  toolssection.css  values.css
