[package]
name = "rocketserverapplication"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6.5"
sqlx = { version = "0.7.4", features = ["runtime-async-std-native-tls", "postgres", "chrono"] }
colored = "2.1.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"

actix-cors = "0.6.4"
bcrypt = "0.15.0"
chrono = "0.4.31"
jsonwebtoken = "8.3.0"